server/internal/resourceaccess/operatedruntime/testdata/golden/production/archistrator-webapp.yaml
---
# Source: archistrator-webapp/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: archistrator-webapp
  namespace: archistrator
  labels:
    helm.sh/chart: archistrator-webapp-0.1.0
    app.kubernetes.io/name: archistrator-webapp
    app.kubernetes.io/instance: archistrator-webapp
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: archistrator-webapp
    app.kubernetes.io/instance: archistrator-webapp
---
# Source: archistrator-webapp/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archistrator-webapp
  namespace: archistrator
  labels:
    helm.sh/chart: archistrator-webapp-0.1.0
    app.kubernetes.io/name: archistrator-webapp
    app.kubernetes.io/instance: archistrator-webapp
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: archistrator-webapp
      app.kubernetes.io/instance: archistrator-webapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: archistrator-webapp
        app.kubernetes.io/instance: archistrator-webapp
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: archistrator-webapp
                  app.kubernetes.io/instance: archistrator-webapp
              topologyKey: kubernetes.io/hostname
      containers:
      - name: webapp
        image: "ghcr.io/mixofreality-studio/archistrator-webapp:0.6.14"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
